package com.example.foodliveryapp;

import org.json.JSONObject;

public interface ServerCallback {

    void onSuccess(JSONObject response);
}

