package com.example.foodliveryapp.database;

public interface ServerErrorCallback {

    void onFailure();
}
